@@ -1,3 +1,7 @@
+Fri Jul  9 12:41:27 1999  DanEspen  <dje@blue>
+
+	* links.html: Missed this one.
+
 Thu Jul  1 22:05:22 1999  DanEspen  <dje@blue>
 
 	* screenshot.html: was index.html, now separate.
